Fix task runIde location